--- a/docs/src/markdown/Data Analysis/相关性.md
+++ b/docs/src/markdown/Data Analysis/相关性.md
@@ -1,5 +1,19 @@
 # 相关性
 
+## 皮尔森相关系数
+
+$$
+r= \frac{Cov(x,y)}{\sigma(x)\sigma(y)} =\frac{\sum\left(x_{t}-\bar{x}\right)\left(y_{t}-\bar{y}\right)}{\sqrt{\sum\left(x_{t}-\bar{x}\right)^{2}} \sqrt{\sum\left(y_{t}-\bar{y}\right)^{2}}} 
+$$
+
+!!! tip "注意"
+     1. $r \in [-1, 1]$
+     2. 只能衡量==线性关系== 的相关程度
+     3. $r_{x_1,y_1} = r_{x_2,y_2}$ 但 $(x_1,y_1)$ 与 $(x_1,y_2)$ 可能拥有不同的形态
+        1. === "例子"
+             ![](images/corr-2020-04-24-11-57-22.png)
+
+
 ## 自相关
 
 给定一个时间序列数据 $\{r_t\}_{t=1}^T$ , $\bar r$ 为均值， 则间隔为1（$l=1$）的自相关系数为
