--- a/docs/src/markdown/Data Analysis/相关性.md
+++ b/docs/src/markdown/Data Analysis/相关性.md
@@ -7,11 +7,15 @@ r= \frac{Cov(x,y)}{\sigma(x)\sigma(y)} =\frac{\sum\left(x_{t}-\bar{x}\right)\lef
 $$
 
 !!! tip "注意"
-     1. $r \in [-1, 1]$
-     2. 只能衡量==线性关系== 的相关程度
-     3. $r_{x_1,y_1} = r_{x_2,y_2}$ 但 $(x_1,y_1)$ 与 $(x_1,y_2)$ 可能拥有不同的形态
-        1. === "例子"
-             ![](images/corr-2020-04-24-11-57-22.png)
+     1. $r \in [-1, 1]$ 。
+     2. 只能衡量==线性关系== 的相关程度。
+     3. $r_{x_1,y_1} = r_{x_2,y_2}$ 但 $(x_1,y_1)$ 与 $(x_1,y_2)$ 可能拥有不同的形态; 因此在分析变量之间关系时，不仅要看相关系数值，而且要关注生成的图形。
+     4. 
+??? info classes "例子"
+    === "相同系数不同形态"
+        ![](images/corr-2020-04-24-11-57-22.png){width=50%}
+    === "只能衡量线性关系"
+        todo
 
 
 ## 自相关
