--- a/docs/src/markdown/Data Analysis/时间序列.md
+++ b/docs/src/markdown/Data Analysis/时间序列.md
@@ -2,8 +2,8 @@
 
 ## 基本定义
 
-??? info classes "定义"
-     1. $\rho_{l}=\frac{\operatorname{Cov}\left(r_{t}, r_{t-l}\right)}{\operatorname{Var}\left(r_{t}\right)}$  间隔 $l$ 的自相关系数。
+$\rho_l$
+:   $\frac{Cov\left(r_{t}, r_{t-l}\right)}{Var\left(r_{t}\right)}$   间隔 $l$ 的自相关系数。
 
 ## 平稳性
 
@@ -23,4 +23,37 @@
     todo
 === "LB统计量"
     todo
+
+## 预测方法
+
+有时候最简单的预测方法可能会是最好的预测方法，但是在很多情况下，这些方法只是作为基准方法而不是被直接运用。也就是说，我们提出的任何预测方法都会和这些简单方法比较，以保证其预测结果优于这些简单方法，否则，新的方法就不值得考虑。
+
+=== "均值法"
+    $\hat{y}_{T+h|T} = E(y_i)$ 其中 $h$ 为预测期数。
+
+    ```R
+        meanf(ts, h=11)
+    ```
+
+=== "Naive"
+    所有预测值设置为最后一次观测值：$\hat{y}_{T+h|T} = y_T$。 这种方法看似简单，但当数据服从 *随机游走* 过程时，Naive预测是最优的。因此也被称为“随机游走预测”。
+
+    ```R
+        naive(ts, h=11)
+    ```
+
+=== "季节性Naive"
+    将预测值设置为去年同一个季节前一期的观测值： $\hat{y}_{T+h|T} = y_{T+h-km}$， 其中 $m$ 为周期长度，比如：对于月度数据，未来所有二月的预测值都等于前一年二月的观测值。
+
+    ```R
+        snaive(ts, h=11)
+    ```
+
+=== "漂移法"
+     允许预测值随着时间的推移增大或减小，并且我们假定单位时间改变量（称作 “漂移”）等于历史数据的平均改变量，$\hat{y}_{T+h|T} = y_T + h\frac{y_T - y_1}{T - 1}$ 。
+
+    ```R
+        rwf(ts, h=11)
+    ```
+
 
