--- a/docs/src/markdown/Data Analysis/时间序列.md
+++ b/docs/src/markdown/Data Analysis/时间序列.md
@@ -137,6 +137,24 @@ $\rho_l$
 === "TODO"
     TODO
 
+## 时间序列分解
+
+??? info classes "时间序列的组成成分"
+    1. $S_t$ 季节项
+    2. $T_t$ 趋势项
+    3. $R_t$ 残差项
+
+??? info classes "时间序列的组成方式"
+    1. 加法
+        
+        $$y_t = S_t + T_t + R_t$$
+
+    2. 乘法
+        
+        $$y_t = S_t * T_t * R_t$$
+
+=== "时间序列分解算法"
+     content
 
 
 
